# BalancingRobot

Software/: CMakeLists.txt  main.c
Software/CAN/: can-socket.c  can-socket.h
Software/Fusion/: Fusion.h  FusionAhrs.c  FusionAhrs.h  FusionAxes.h  FusionCompass.c  FusionCompass.h  FusionMath.h
Software/IMU/: Adafruit_BMP085_U.c  Adafruit_BMP085_U.h  Adafruit_L3GD20_U.c  Adafruit_LSM303_U.c  Adafruit_LSM303_U.h
Software/TMotor/: TMotor.c  TMotor.h
